Add ansible scripts and updates

--- a/install
+++ b/install
@@ -3,7 +3,6 @@
 pushd $DOTFILES
 for folder in $(echo $STOW_FOLDERS | sed "s/,/ /g")
 do
-    stow -D $folder
-    stow $folder
+    stow --restow $folder
 done
 popd
