--- a/install
+++ b/install
@@ -3,6 +3,6 @@
 pushd $DOTFILES
 for folder in $(echo $STOW_FOLDERS | sed "s/,/ /g")
 do
-    stow --restow --adopt $folder
+    stow --restow --adopt --override='.*' $folder
 done
 popd
